--- a/modulo1/css-labetube/site.css
+++ b/modulo1/css-labetube/site.css
@@ -19,7 +19,7 @@ a{
     padding: 15px;
     align-items: center;
     flex-wrap: wrap;
-    background-color: rgb(238, 210, 53);
+    background-color: rgb(176,196,222);
     overflow: hidden;
     
 }
